--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- webfont -->
     <link href="https://fonts.cdnfonts.com/css/nulshock" rel="stylesheet">
     <!-- css -->
-    <link rel="stylesheet" href="../css/header_footer.css">
+    <link rel="stylesheet" href="css/header_footer.css">
     <link rel="stylesheet" href="css/main_style.css">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/swiper_important.css">
