--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <div id="header" class="header_s"> <!-- 위로 올리는 포지션 -->
                 <div class="inner_header">
                     <h1 class="logo">
-                        <a href="#"></a>
+                        <a href="./index.html"></a>
                     </h1>
                     <ul class="gnb">
                         <li><a href="#">MUSIC</a></li>
                         <li><a href="#">MAGAZINE</a></li>
                         <li><a href="#">FESTIVAL</a></li>
-                        <li><a href="#">GOODS</a></li>
-                        <li><a href="#">ABOUT</a></li>
+                        <li><a href="./sub/sub_goods.html">GOODS</a></li>
+                        <li><a href="./sub/sub_about.html">ABOUT</a></li>
                     </ul>
                     <h1 class="search">
                         <a href="#"><img src="./images/search_icon.png" alt="search_icon"></a>
@@ -784,10 +784,10 @@
                     </p>
                 </div>
                 <ul class="sns">
-                    <li><a href="#"><img src="./images/sns_facebook.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="./images/sns_instar.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="./images/sns_twitter.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="./images/sns_youtube.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="./images/sns_facebook.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="./images/sns_instar.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="./images/sns_twitter.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="./images/sns_youtube.png" alt="sns"></a></li>
                 </ul>
             </div>
         </div>
@@ -893,7 +893,7 @@
     </script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="js/script.js"></script>
-    <!-- aso js -->
+    <!-- aos js -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
