--- a/sub/sub_goods.html
+++ b/sub/sub_goods.html
@@ -39,9 +39,8 @@
                         <a href="../index.html"></a>
                     </h1>
                     <ul class="gnb">
-                        <li><a href="#">MUSIC</a></li>
-                        <li><a href="#">MAGAZINE</a></li>
-                        <li><a href="#">FESTIVAL</a></li>
+                        <li><a href="./sub_magazine.html">MAGAZINE</a></li>
+                        <li><a href="./sub_festival.html">FESTIVAL</a></li>
                         <li><a class="on" href="./sub_goods.html">GOODS</a></li>
                         <li><a href="./sub_about.html">ABOUT</a></li>
                     </ul>
@@ -260,13 +259,13 @@
         <div id="footer"> <!--footer s-->
             <div class="inner_footer">
                 <div class="footer_logo">
-                    <a href="#"> <img src="../images/footer_logo.svg" alt="footer_logo"></a>
+                    <a href="../index.html"> <img src="../images/footer_logo.svg" alt="footer_logo"></a>
                 </div>
                 <div class="footer_text">
                     <ul class="info">
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                        <li><a href="#">고객센터</a></li>
+                        <li><a href="javascript:return false;">이용약관</a></li>
+                        <li><a href="javascript:return false;">개인정보처리방침</a></li>
+                        <li><a href="javascript:return false;">고객센터</a></li>
                     </ul>
                     <p>
                         상호명 : (주)뮤플뮤직 | 대표 : 장유진 | 부산 중구 중앙대로
