--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <div id="wrap">
-        <div id="main_banner">
+        <div id="main_banner"> <!--main_banner s-->
             <div id="main_banner_bg"> <!--가운데 보내는 포지션-->
                 <img src="./images/mv_banner.png" alt="mv">
             </div>
@@ -32,9 +32,8 @@
                         <a href="./index.html"></a>
                     </h1>
                     <ul class="gnb">
-                        <li><a href="#">MUSIC</a></li>
-                        <li><a href="#">MAGAZINE</a></li>
-                        <li><a href="#">FESTIVAL</a></li>
+                        <li><a href="./sub/sub_magazine.html">MAGAZINE</a></li>
+                        <li><a href="./sub/sub_festival.html">FESTIVAL</a></li>
                         <li><a href="./sub/sub_goods.html">GOODS</a></li>
                         <li><a href="./sub/sub_about.html">ABOUT</a></li>
                     </ul>
@@ -43,11 +42,12 @@
                     </h1>
                 </div>
             </div>
-        </div>
-        <div id="magazine">
+        </div> <!--main_banner f-->
+
+        <div id="magazine"> <!--magazine s-->
             <div class="division_top">
                 <h1 class="division_title">MAGAZINE</h1>
-                <a class="more_btn" href="#">
+                <a class="more_btn" href="./sub/sub_magazine.html">
                     <img src="./images/more_btn.png" alt="more_btn">
                 </a>
             </div>
@@ -67,7 +67,7 @@
                                     2023.08.14
                                 </p>
                             </div>
-                            <a href="#" class="view_btn">자세히 보기</a>
+                            <a href="./sub/magazine1.html" class="view_btn">자세히 보기</a>
                         </div>
                     </li>
                     <li class="down" data-aos="fade-down" data-aos-duration="700">
@@ -84,7 +84,7 @@
                                     2023.07.25
                                 </p>
                             </div>
-                            <a href="#" class="view_btn">자세히 보기</a>
+                            <a href="javascript:return false;" class="view_btn">자세히 보기</a>
                         </div>
                     </li>
                     <li  data-aos="fade-up" data-aos-duration="700">
@@ -101,7 +101,7 @@
                                     2023.07.24
                                 </p>
                             </div>
-                            <a href="#" class="view_btn">자세히 보기</a>
+                            <a href="javascript:return false;" class="view_btn">자세히 보기</a>
                         </div>
                     </li>
                     <li class="down" data-aos="fade-down" data-aos-duration="700">
@@ -118,19 +118,17 @@
                                     2023.07.14
                                 </p>
                             </div>
-                            <a href="#" class="view_btn">자세히 보기</a>
+                            <a href="javascript:return false;" class="view_btn">자세히 보기</a>
                         </div>
                     </li>
                 </ul>
             </div>
-        </div>
-        <div id="playlist"> <!--가운데-->
+        </div> <!--magazine f-->
+
+        <div id="playlist"> <!--가운데--> <!--playlist s-->
             <div class="inner_playlist">
                 <div class="division_top">
                     <h1 class="division_title">PLAYLIST</h1>
-                    <a class="more_btn" href="#">
-                        <img src="./images/more_btn.png" alt="more_btn">
-                    </a>
                 </div>
                 <div class="mood"> <!--왼쪽-->
                     <div id="banner">
@@ -177,13 +175,11 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="chart">
+        </div> <!--playlist f-->
+
+        <div id="chart"> <!--chart s-->
             <div class="division_top">
                 <h1 class="division_title">CHART</h1>
-                <a class="more_btn" href="#">
-                    <img src="./images/more_btn.png" alt="more_btn">
-                </a>
             </div>
             <div class="first_wrap">
                 <div data-aos="fade-left" data-aos-duration="800">
@@ -272,8 +268,9 @@
                     </li>
                 </ul>
             </div>
-        </div>
-        <div id="new">
+        </div> <!--chart f-->
+
+        <div id="new"> <!--new s-->
             <div class="division_top">
                 <h1 class="division_title">NEW</h1>
             </div>
@@ -531,8 +528,9 @@
                     <a href="#new" id="button3">해외</a>
                 </li>
             </ul>
-        </div>
-        <div id="video">
+        </div>  <!--new f-->
+
+        <div id="video"> <!--video s-->
             <div class="inner_video">
                 <div class="division_top">
                     <h1 class="division_title">VIDEO</h1>
@@ -688,22 +686,24 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="festival_banner">
+        </div> <!--video f-->
+        
+        <div id="festival_banner"> <!--festival_banner s-->
             <div class="inner_festival_banner">
                 <div class="festival_logo">
-                    <a href="#">
+                    <a href="./sub/sub_festival.html">
                         <img src="./images/festival_logo.png" alt="festival_logo">
                     </a>
                 </div>
                 <div class="festival_text">
-                    <a href="#">
+                    <a href="./sub/sub_festival.html">
                         <img src="./images/muplemusicfestival.png" alt="festvial_text">
                     </a>
                 </div>
             </div>
-        </div>
-        <div id="goods_banner">
+        </div> <!--festival_banner f-->
+
+        <div id="goods_banner"> <!--goods_banner s-->
             <div class="inner_goods_banner">
                 <h1>
                     MUPLE × GQO
@@ -713,18 +713,19 @@
                     <br>뮤플의 음악을 더욱 입체적인 사운드로 즐겨 보세요
                 </p>
                 <div class="goods1">
-                    <a href="#">
+                    <a href="./sub/sub_goods.html">
                         <img src="./images/goods1.png" alt="goods">
                     </a>
                 </div>
                 <div class="goods2">
-                    <a href="#">
+                    <a href="./sub/sub_goods.html">
                         <img src="./images/goods2.png" alt="goods">
                     </a>
                 </div>
             </div>
-        </div>
-        <div id="user_playlist">
+        </div> <!--goods_banner f-->
+
+        <div id="user_playlist"> <!--user_playlist s-->
             <div class="inner_user_playlist">
                 <div class="division_top">
                     <h1 class="division_title">USER PLAYLIST</h1>
@@ -765,17 +766,18 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="footer">
+        </div> <!--user_playlist f-->
+
+        <div id="footer"> <!--footer s-->
             <div class="inner_footer">
                 <div class="footer_logo">
-                    <a href="#"> <img src="./images/footer_logo.svg" alt="footer_logo"></a>
+                    <a href="./index.html"> <img src="./images/footer_logo.svg" alt="footer_logo"></a>
                 </div>
                 <div class="footer_text">
                     <ul class="info">
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                        <li><a href="#">고객센터</a></li>
+                        <li><a href="javascript:return false;">이용약관</a></li>
+                        <li><a href="javascript:return false;">개인정보처리방침</a></li>
+                        <li><a href="javascript:return false;">고객센터</a></li>
                     </ul>
                     <p>
                         상호명 : (주)뮤플뮤직 | 대표 : 장유진 | 부산 중구 중앙대로
@@ -790,7 +792,7 @@
                     <li><a href="javascript:return false;"><img src="./images/sns_youtube.png" alt="sns"></a></li>
                 </ul>
             </div>
-        </div>
+        </div> <!--footer f-->
     </div>
 
 
