--- a/sub/sub_about.html
+++ b/sub/sub_about.html
@@ -35,9 +35,8 @@
                         <a href="../index.html"></a>
                     </h1>
                     <ul class="gnb">
-                        <li><a href="#">MUSIC</a></li>
-                        <li><a href="#">MAGAZINE</a></li>
-                        <li><a href="#">FESTIVAL</a></li>
+                        <li><a href="./sub_magazine.html">MAGAZINE</a></li>
+                        <li><a href="./sub_festival.html">FESTIVAL</a></li>
                         <li><a href="./sub_goods.html">GOODS</a></li>
                         <li><a class="on" href="./sub_about.html">ABOUT</a></li>
                     </ul>
@@ -130,19 +129,19 @@
                 <div class="center_logo">
                     <img src="../images/sub_about/center_logo.png" alt="logo">
                 </div>
-                <a href="#">
+                <a href="../index.html">
                     <div class="concept1"></div>
                     <div class="concept1 hover1"></div>
                 </a>
-                <a href="#">
+                <a href="./sub_magazine.html">
                     <div class="concept2"></div>
                     <div class="concept2 hover2"></div>
                 </a>
-                <a href="#">
+                <a href="./sub_festival.html">
                     <div class="concept3"></div>
                     <div class="concept3 hover3"></div>
                 </a>
-                <a href="#">
+                <a href="./sub_goods.html">
                     <div class="concept4"></div>
                     <div class="concept4 hover4"></div>
                 </a>
@@ -152,13 +151,13 @@
         <div id="footer"> <!--footer s-->
             <div class="inner_footer">
                 <div class="footer_logo">
-                    <a href="#"> <img src="../images/footer_logo.svg" alt="footer_logo"></a>
+                    <a href="../index.html"> <img src="../images/footer_logo.svg" alt="footer_logo"></a>
                 </div>
                 <div class="footer_text">
                     <ul class="info">
-                        <li><a href="#">이용약관</a></li>
-                        <li><a href="#">개인정보처리방침</a></li>
-                        <li><a href="#">고객센터</a></li>
+                        <li><a href="javascript:return false;">이용약관</a></li>
+                        <li><a href="javascript:return false;">개인정보처리방침</a></li>
+                        <li><a href="javascript:return false;">고객센터</a></li>
                     </ul>
                     <p>
                         상호명 : (주)뮤플뮤직 | 대표 : 장유진 | 부산 중구 중앙대로
@@ -167,10 +166,10 @@
                     </p>
                 </div>
                 <ul class="sns">
-                    <li><a href="#"><img src="../images/sns_facebook.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="../images/sns_instar.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="../images/sns_twitter.png" alt="sns"></a></li>
-                    <li><a href="#"><img src="../images/sns_youtube.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="../images/sns_facebook.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="../images/sns_instar.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="../images/sns_twitter.png" alt="sns"></a></li>
+                    <li><a href="javascript:return false;"><img src="../images/sns_youtube.png" alt="sns"></a></li>
                 </ul>
             </div>
         </div> <!--footer f-->
