--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                                 <p>NewJeans</p>
                             </div>
                             <div class="heart_btn">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
 
@@ -220,7 +220,7 @@
                             <br>NewJeans
                         </p>
                         <div class="heart_btn">
-                            <a href="#"></a>
+                            <a href="javascript:return false;"></a>
                         </div>
 
                     </li>
@@ -235,7 +235,7 @@
                             <br>정국
                         </p>
                         <div class="heart_btn">
-                            <a href="#"></a>
+                            <a href="javascript:return false;"></a>
                         </div>
                     </li>
                     <li>
@@ -249,7 +249,7 @@
                             <br>AKMU(악뮤)
                         </p>
                         <div class="heart_btn">
-                            <a href="#"></a>
+                            <a href="javascript:return false;"></a>
                         </div>
                     </li>
                     <li>
@@ -263,7 +263,7 @@
                             <br>IVE(아이브)
                         </p>
                         <div class="heart_btn">
-                            <a href="#"></a>
+                            <a href="javascript:return false;"></a>
                         </div>
                     </li>
                 </ul>
@@ -285,7 +285,7 @@
                                 <br>CRAVITY
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -298,7 +298,7 @@
                                 <br>Doja Cat
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -311,7 +311,7 @@
                                 <br>비비(BIBI)
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -324,7 +324,7 @@
                                 <br>니나스
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -337,7 +337,7 @@
                                 <br>ADOY
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -350,7 +350,7 @@
                                 <br>MIKA
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -365,7 +365,7 @@
                                 <br>CRAVITY
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -378,7 +378,7 @@
                                 <br>비비(BIBI)
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -391,7 +391,7 @@
                                 <br>니나스
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -404,7 +404,7 @@
                                 <br>ADOY
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -417,7 +417,7 @@
                                 <br>Chan(찬)
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -430,7 +430,7 @@
                                 <br>Anna(안나)
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -445,7 +445,7 @@
                                 <br>Doja Cat
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -458,7 +458,7 @@
                                 <br>MIKA
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -471,7 +471,7 @@
                                 <br>Peder Elias
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -484,7 +484,7 @@
                                 <br>Demi Lovato
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -497,7 +497,7 @@
                                 <br>DURDN
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
@@ -510,7 +510,7 @@
                                 <br>Bella Poarch, Lauv
                             </p>
                             <div class="heart_btn_s">
-                                <a href="#"></a>
+                                <a href="javascript:return false;"></a>
                             </div>
                         </div>
                     </li>
