--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="wrap">
         <div id="main_banner"> <!--main_banner s-->
             <div id="main_banner_bg"> <!--가운데 보내는 포지션-->
-                <img src="./images/mv_banner.png" alt="mv">
+                <video src="./media/muple.mp4" muted="" preload="true" autoplay loop></video>
             </div>
             <div id="header" class="header_s"> <!-- 위로 올리는 포지션 -->
                 <div class="inner_header">
