--- a/sub/magazine1.html
+++ b/sub/magazine1.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1360">
     <title>Document</title>
     <link rel="stylesheet" href="../css/sub_magazine1.css">
     <!-- aos css -->
