--- a/sub/sub_festival.html
+++ b/sub/sub_festival.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1360">
     <title>Document</title>
     <!-- favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon-32x32.png">
