--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="magazine"> <!--magazine s-->
             <div class="division_top">
                 <h1 class="division_title">MAGAZINE</h1>
-                <a class="more_btn" href="./sub/sub_magazine.html">
+                <a class="more_btn" href="./sub/sub_magazine.html"  target="_blank">
                     <img src="./images/more_btn.png" alt="more_btn">
                 </a>
             </div>
