--- a/sub/sub_about.html
+++ b/sub/sub_about.html
@@ -73,7 +73,7 @@
             </ul>
         </div> <!--brand_logo f-->
 
-        <div id="brand_name">
+        <div id="brand_name"><!--brand_name s-->
             <h2 class="section_name"><span>BRAND NAME</span></h2>
             <div class="name_wrap">
                 <div class="name name1">
@@ -116,9 +116,9 @@
             </div>
 
 
-        </div>
+        </div><!--brand_name f-->
 
-        <div id="brand_concept">
+        <div id="brand_concept"><!--brand_concept s-->
             <h2 class="section_name"><span>BRAND CONCEPT</span></h2>
             <h3 data-aos="fade-down"  data-aos-duration="800"><span>"BRING MUSIC TO LIFE!"</span></h3>
             <p data-aos="fade-down"  data-aos-duration="800" data-aos-delay="200">뮤플은 단순한 스트리밍을 넘어서 다양한 음악 컨텐츠를 한 데 모아 즐길 수 있는 플랫폼입니다.
@@ -146,7 +146,7 @@
                     <div class="concept4 hover4"></div>
                 </a>
             </div>
-        </div>
+        </div><!--brand_concept f-->
 
         <div id="footer"> <!--footer s-->
             <div class="inner_footer">
