--- a/sub/sub_magazine.html
+++ b/sub/sub_magazine.html
@@ -52,7 +52,7 @@
 
         </div><!--month f-->
 
-        <div id="main_mag">
+        <div id="main_mag"><!--main_mag s-->
             <div class="inner_main_mag">
                 <div class="text"> <!--float right-->
                     <h1 data-aos="fade-down" data-aos-duration="600">New Release #156 :
@@ -61,16 +61,16 @@
                     <p data-aos="fade-down" data-aos-duration="600">방탄소년단 뷔의 첫 번째 솔로 앨범 선공개 곡부터,
                         <br>2집 역시 돌풍이 예상되는 올리비아 로드리고의 신곡까지.
                     </p>
-                    <a class="more_btn" href="./magazine1.html" data-aos="fade-down" data-aos-duration="600">자세히 보기</a>
+                    <a class="more_btn" href="./magazine1.html" target="_blank" data-aos="fade-down" data-aos-duration="600">자세히 보기</a>
                 </div>
                 <div class="photo" data-aos="fade-right" data-aos-duration="700"> <!--float left-->
-                    <a href="./magazine1.html"><img src="../images/sub_magazine/mag1.png" alt="mag1"></a>
+                    <a href="./magazine1.html" target="_blank"><img src="../images/sub_magazine/mag1.png" alt="mag1"></a>
                 </div>
             </div>
-        </div>
+        </div><!--main_mag f-->
     </div>
 
-    <div id="mag">
+    <div id="mag"><!--mag s-->
         <h2><span>SPECIAL</span></h2>
         <div class="top">
             <div class="left">
@@ -152,9 +152,9 @@
                 </a>
             </li>
         </ul>
-    </div>
+    </div><!--mag f-->
 
-    <div id="mag_swiper"><!--position_r-->
+    <div id="mag_swiper"><!--position_r--><!--mag_swiper s-->
         <!-- Swiper -->
         <div id="slide">
             <div class="swiper mySwiper">
@@ -254,9 +254,9 @@
             </div>
         </div>
 
-    </div>
+    </div><!--mag_swiper f-->
 
-    <div id="magazine_bg"  data-aos="fade-up" data-aos-duration="1000">
+    <div id="magazine_bg"  data-aos="fade-up" data-aos-duration="1000"><!--magazine_bg s-->
         <div id="footer"> <!--footer s-->
             <div class="inner_footer">
                 <div class="footer_logo">
@@ -282,7 +282,7 @@
                 </ul>
             </div>
         </div> <!--footer f-->
-    </div>
+    </div><!--magazine_bg f-->
 
     <!-- js -->
     <script>
