--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div id="magazine"> <!--magazine s-->
             <div class="division_top">
                 <h1 class="division_title">MAGAZINE</h1>
-                <a class="more_btn" href="./sub/sub_magazine.html"  target="_blank">
+                <a class="more_btn" href="./sub/sub_magazine.html">
                     <img src="./images/more_btn.png" alt="more_btn">
                 </a>
             </div>
@@ -67,7 +67,7 @@
                                     2023.08.14
                                 </p>
                             </div>
-                            <a href="./sub/magazine1.html" class="view_btn">자세히 보기</a>
+                            <a href="./sub/magazine1.html" class="view_btn"  target="_blank">자세히 보기</a>
                         </div>
                     </li>
                     <li class="down" data-aos="fade-down" data-aos-duration="700">
