--- a/sub/magazine1.html
+++ b/sub/magazine1.html
@@ -12,11 +12,12 @@
 
 <body>
     <div id="wrap">
-        <div class="fixed"><!--main_banner s-->
+        <div class="fixed"><!--fixed s-->
             <a href="../index.html#projects" onclick="window.close()"><img src="../images/sub_magazine1/back.png"
                     alt="back"></a>
-        </div>
-        <div id="title">
+        </div><!--fixed f-->
+        
+        <div id="title"><!--title s-->
             <div class="inner_title">
                 <h1 data-aos="fade-down" data-aos-duration="700">New Release #156 :
                     <br>주목할 만한 신곡
@@ -32,8 +33,9 @@
                                 alt="play"></a></li>
                 </ul>
             </div>
-        </div>
-        <div id="content">
+        </div><!--title f-->
+
+        <div id="content"><!--content s-->
             <div class="section right"> <!--positon_r-->
                 <div class="pic_box" data-aos="fade-right" data-aos-duration="700" data-aos-delay="300"><img
                         src="../images/sub_magazine1/pic1.png" alt="pic"></div> <!--positon_a-->
@@ -128,8 +130,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="playlist">
+        </div><!--content f-->
+
+        <div id="playlist"><!--playlist s-->
             <div class="top">
                 <p>play list</p>
                 <ul class="b_btn">
@@ -187,7 +190,7 @@
                 </li>
             </ul>
 
-        </div>
+        </div><!--playlist f-->
     </div>
 
     <!-- aos js -->
