--- a/sub/sub_about.html
+++ b/sub/sub_about.html
@@ -47,30 +47,32 @@
             </div>
         </div> <!--main_banner f-->
 
-        <div id="brand_logo"> <!--brand_logo s-->
-            <h2 class="section_name"><span>BRAND LOGO</span></h2>
-            <div class="main_logo" data-aos="fade-down"  data-aos-duration="800">
-                <div class="img_wrap" data-aos="fade-down"  data-aos-duration="800" data-aos-delay="200">
+        <div id="brand_logo"><!--brand_logo s-->
+            <div id="inner_brand_logo"> 
+                <h2 class="section_name"><span>BRAND LOGO</span></h2>
+                <div class="main_logo" data-aos="fade-down"  data-aos-duration="800">
+                    <div class="img_wrap" data-aos="fade-down"  data-aos-duration="800" data-aos-delay="200">
+                    </div>
+                    <div class="text_wrap" data-aos="fade-down"  data-aos-duration="800" data-aos-delay="350">
+                        <h3>♡</h3>
+                        <p>하트 형태로 심장 박동을 형상화하였습니다.
+                            <br>뮤플은 음악을 사랑하는 마음을 담아
+                            <br>음악의 비트와 설레임을 표현합니다.
+                        </p>
+                        <h3>M</h3>
+                        <p>MUSIC의 M과 MUPlE의 M을 따왔습니다.
+                            <br>MM이 교차하는 형태로 박동을 나타냅니다.
+                        </p>
+                    </div>
                 </div>
-                <div class="text_wrap" data-aos="fade-down"  data-aos-duration="800" data-aos-delay="350">
-                    <h3>♡</h3>
-                    <p>하트 형태로 심장 박동을 형상화하였습니다.
-                        <br>뮤플은 음악을 사랑하는 마음을 담아
-                        <br>음악의 비트와 설레임을 표현합니다.
-                    </p>
-                    <h3>M</h3>
-                    <p>MUSIC의 M과 MUPlE의 M을 따왔습니다.
-                        <br>MM이 교차하는 형태로 박동을 나타냅니다.
-                    </p>
-                </div>
+                <ul class="logo_version">
+                    <li data-aos="fade-right"  data-aos-duration="800" data-aos-delay="200"><img src="../images/sub_about/logo_simple.png" alt="simple"></li>
+                    <li data-aos="fade-down"  data-aos-duration="800"><img src="../images/sub_about/line.png" alt="line"></li>
+                    <li data-aos="fade-down"  data-aos-duration="800" data-aos-delay="400"><img src="../images/sub_about/logo_basic.png" alt="basic"></li>
+                    <li data-aos="fade-down"  data-aos-duration="800"><img src="../images/sub_about/line.png" alt="line"></li>
+                    <li data-aos="fade-left"  data-aos-duration="800" data-aos-delay="600"><img src="../images/sub_about/logo_dynamic.png" alt="dynamic"></li>
+                </ul>
             </div>
-            <ul class="logo_version">
-                <li data-aos="fade-right"  data-aos-duration="800" data-aos-delay="200"><img src="../images/sub_about/logo_simple.png" alt="simple"></li>
-                <li data-aos="fade-down"  data-aos-duration="800"><img src="../images/sub_about/line.png" alt="line"></li>
-                <li data-aos="fade-down"  data-aos-duration="800" data-aos-delay="400"><img src="../images/sub_about/logo_basic.png" alt="basic"></li>
-                <li data-aos="fade-down"  data-aos-duration="800"><img src="../images/sub_about/line.png" alt="line"></li>
-                <li data-aos="fade-left"  data-aos-duration="800" data-aos-delay="600"><img src="../images/sub_about/logo_dynamic.png" alt="dynamic"></li>
-            </ul>
         </div> <!--brand_logo f-->
 
         <div id="brand_name"><!--brand_name s-->
@@ -119,32 +121,36 @@
         </div><!--brand_name f-->
 
         <div id="brand_concept"><!--brand_concept s-->
-            <h2 class="section_name"><span>BRAND CONCEPT</span></h2>
-            <h3 data-aos="fade-down"  data-aos-duration="800"><span>"BRING MUSIC TO LIFE!"</span></h3>
-            <p data-aos="fade-down"  data-aos-duration="800" data-aos-delay="200">뮤플은 단순한 스트리밍을 넘어서 다양한 음악 컨텐츠를 한 데 모아 즐길 수 있는 플랫폼입니다.
-                <br>스트리밍 / 매거진 / 페스티벌 / 굿즈, 관심사에 따라
-                <br>일상 속 언제 어디에서나 음악을 사랑하는 사람들과 함께, 뮤플과 함께 할 수 있습니다.
-            </p>
-            <div class="box" data-aos="fade-zoom-in" data-aos-duration="800" data-aos-delay="500"> <!--position_r-->
-                <div class="center_logo">
-                    <img src="../images/sub_about/center_logo.png" alt="logo">
+            <div id="inner_brand_concept">
+                <div class="inner_brand_concept"> 
+                    <h2 class="section_name"><span>BRAND CONCEPT</span></h2>
+                    <h3 data-aos="fade-down"  data-aos-duration="800"><span>"BRING MUSIC TO LIFE!"</span></h3>
+                    <p data-aos="fade-down"  data-aos-duration="800" data-aos-delay="200">뮤플은 단순한 스트리밍을 넘어서 다양한 음악 컨텐츠를 한 데 모아 즐길 수 있는 플랫폼입니다.
+                        <br>스트리밍 / 매거진 / 페스티벌 / 굿즈, 관심사에 따라
+                        <br>일상 속 언제 어디에서나 음악을 사랑하는 사람들과 함께, 뮤플과 함께 할 수 있습니다.
+                    </p>
+                    <div class="box" data-aos="fade-zoom-in" data-aos-duration="800" data-aos-delay="500"> <!--position_r-->
+                        <div class="center_logo">
+                            <img src="../images/sub_about/center_logo.png" alt="logo">
+                        </div>
+                        <a href="../index.html">
+                            <div class="concept1"></div>
+                            <div class="concept1 hover1"></div>
+                        </a>
+                        <a href="./sub_magazine.html">
+                            <div class="concept2"></div>
+                            <div class="concept2 hover2"></div>
+                        </a>
+                        <a href="./sub_festival.html">
+                            <div class="concept3"></div>
+                            <div class="concept3 hover3"></div>
+                        </a>
+                        <a href="./sub_goods.html">
+                            <div class="concept4"></div>
+                            <div class="concept4 hover4"></div>
+                        </a>
+                    </div>
                 </div>
-                <a href="../index.html">
-                    <div class="concept1"></div>
-                    <div class="concept1 hover1"></div>
-                </a>
-                <a href="./sub_magazine.html">
-                    <div class="concept2"></div>
-                    <div class="concept2 hover2"></div>
-                </a>
-                <a href="./sub_festival.html">
-                    <div class="concept3"></div>
-                    <div class="concept3 hover3"></div>
-                </a>
-                <a href="./sub_goods.html">
-                    <div class="concept4"></div>
-                    <div class="concept4 hover4"></div>
-                </a>
             </div>
         </div><!--brand_concept f-->
 
