--- a/sub/magazine1.html
+++ b/sub/magazine1.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=1360">
     <title>Document</title>
     <link rel="stylesheet" href="../css/sub_magazine1.css">
+    <!-- webfont -->
+    <link href="https://fonts.cdnfonts.com/css/nulshock" rel="stylesheet">
     <!-- aos css -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -16,7 +18,7 @@
             <a href="../index.html#projects" onclick="window.close()"><img src="../images/sub_magazine1/back.png"
                     alt="back"></a>
         </div><!--fixed f-->
-        
+
         <div id="title"><!--title s-->
             <div class="inner_title">
                 <h1 data-aos="fade-down" data-aos-duration="700">New Release #156 :
