--- a/sub/sub_about.html
+++ b/sub/sub_about.html
@@ -60,7 +60,7 @@
                             <br>음악의 비트와 설레임을 표현합니다.
                         </p>
                         <h3>M</h3>
-                        <p>MUSIC의 M과 MUPlE의 M을 따왔습니다.
+                        <p>MUSIC의 M과 MUPLE의 M을 따왔습니다.
                             <br>MM이 교차하는 형태로 박동을 나타냅니다.
                         </p>
                     </div>
